--- a/css/sticky-footer.css
+++ b/css/sticky-footer.css
@@ -1,17 +1,23 @@
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
+html 
+{
   position: relative;
   min-height: 100%;
 }
-body {
+
+body 
+{
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-#footer {
+
+#footer 
+{
   position: absolute;
   bottom: 0;
   width: 100%;
+  text-align:center;
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
@@ -24,7 +30,6 @@ body {
 
 .container {
   width: auto;
-  max-width: 680px;
   padding: 0 15px;
 }
 .container .text-muted {
