--- a/css/app.css
+++ b/css/app.css
@@ -70,11 +70,15 @@
 
 #overlay{
 	background-color: #fff;
-	opacity: .7;
-	filter: alpha(opacity=70);
 	display:none;
 	position: absolute; top: 0; left: 0;
 	width: 70%; height: 100%;
 	z-index: 10;
 	margin-left: 15%;
+}
+
+#iframe{
+	width:100%;
+	height:100%;
+	border:0;
 }
