--- a/css/app.css
+++ b/css/app.css
@@ -68,9 +68,14 @@
     box-shadow: 0px 0px 1px #777;
 }
 
+#overlay_wrapper{
+	display:none;
+	position: absolute; top: 0; left: 0;
+	width: 100%; height: 100%;
+}
+
 #overlay{
 	background-color: #fff;
-	display:none;
 	position: absolute; top: 0; left: 0;
 	width: 70%; height: 100%;
 	z-index: 10;
@@ -81,6 +86,7 @@
 	left: 50%;
 	padding: 0 68px;
 }
+
 
 #iframe{
 	width:794px;
