--- a/css/app.css
+++ b/css/app.css
@@ -69,12 +69,14 @@
 }
 
 #overlay_wrapper{
+	overflow: hidden;
 	display:none;
 	position: absolute; top: 0; left: 0;
 	width: 100%; height: 100%;
 }
 
 #overlay{
+	overflow: hidden;
 	background-color: #fff;
 	position: absolute; top: 0; left: 0;
 	width: 70%; height: 100%;
@@ -89,7 +91,8 @@
 
 
 #iframe{
-	width:794px;
-	height:100%;
+	overflow: hidden !import;
+	width:100%;
+	height:101%;
 	border:0;
 }
