Added disappearing and reappearing print button.

--- a/css/flyer.css
+++ b/css/flyer.css
@@ -43,3 +43,31 @@ body.flyer{
 	display: none !important;
 	}
 }
+
+#print-modal
+{
+	z-index:20;
+	display:none;
+	background: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    left: 50%;
+    box-shadow: 0 0 20px #000;
+    -moz-box-shadow: 0 0 20px #000;
+    -webkit-box-shadow: 0 0 10px #000;
+}
+
+#print-modal-controls 
+{
+	border: 1px solid #ccc;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    top: 15px;
+    left: 50%;
+    margin: 0 0 0 -50px;
+    position: fixed;
+    padding: 5px;
+    background: rgba(250, 250, 250, 0.75);
+}
+
+#print_button{}
