--- a/css/sticky-footer.css
+++ b/css/sticky-footer.css
@@ -25,10 +25,7 @@ body
 }
 
 
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
+/* Custom page CSS */
 .container {
   width: auto;
   padding: 0 15px;
