--- a/css/flyer.css
+++ b/css/flyer.css
@@ -69,6 +69,7 @@ body.flyer{
     position: fixed;
     padding: 5px;
     background: rgba(250, 250, 250, 0.75);
+    cursor:pointer;
 }
 
 #print_button{}
