--- a/css/sticky-footer.css
+++ b/css/sticky-footer.css
@@ -8,9 +8,11 @@ html
 
 body 
 {
-	background-color:#2b3a59;
+	background-color:#79CFFF;
+	
 	/* Margin bottom by footer height */
 	margin-bottom: 60px;
+	padding-top: 100px;
 }
 
 #footer 
