--- a/css/app.css
+++ b/css/app.css
@@ -1,17 +1,4 @@
-#centered 
-{
-	width: auto;
-	float:none;
-	margin: 0 auto;
-}
-
-#header
-{
-  text-align:center;
-  margin: 20px;
-}
-
-#logo
+.logo
 {
 	border-radius: 20px;
 }
@@ -29,17 +16,6 @@ p{
 }
 
 /** Form elements */
-#myform
-{
-	width:100%;
-}
-
-#url_field
-{
-	text-align:center;
-	background: #eeeeee;
-
-}
 
 .form_elements
 {
@@ -61,14 +37,22 @@ p{
 }
 
 .generate_button{
-	background: #d97a09;
+	background: #E48719;
+}
+
+
+.event_url_field
+{
+	text-align:center;
+	background: #eeeeee;
+
 }
 
 .form_column{
 	padding: 40px 0 0 0;
 }
 
-#overlay_wrapper{
+.overlay_wrapper{
 	overflow: hidden;
 	display:none;
 	position: absolute; top: 0; left: 0;
@@ -76,7 +60,7 @@ p{
 	z-index: 10;
 }
 
-#overlay{
+.overlay{
 	overflow: hidden;
 	background-color: #fff;
 	position: absolute; top: 0; left: 0;
@@ -87,12 +71,4 @@ p{
 	margin: 0 0 0 -429px;
 	left: 50%;
 	padding: 0 68px;
-}
-
-
-#iframe{
-	overflow: hidden !import;
-	width:100%;
-	height:101%;
-	border:0;
 }
