--- a/css/flyer.css
+++ b/css/flyer.css
@@ -2,12 +2,19 @@ body.flyer{
 	background:#fff;
 }
 
-#flyer_main
+.flyer_main
 {
 	margin: 10%;
 }
 
-#flyer_title
+
+.flyer_when
+{
+  text-align: right;
+  font-size: 1.6em;
+}
+
+.flyer_title
 {
 	padding-left: 15%;
 	margin: 20px;
@@ -16,20 +23,14 @@ body.flyer{
 	vertical-align:center;
 }
 
-#flyer_when
-{
-	text-align: right;
-	font-size: 1.6em;
-}
-
-#flyer_where
+.flyer_where
 {
 	text-align: right;
 	font-size: 1.1em;
 	padding-bottom: 20px;
 }
 
-#flyer_description
+.flyer_description
 {
 	margin: 20px, 0px;
 	font-size: 1em;
