--- a/css/flyer.css
+++ b/css/flyer.css
@@ -46,7 +46,7 @@ body.flyer{
 	
 }
 
-#print-modal
+.print-modal
 {
 	z-index:20;
 	display:none;
@@ -58,7 +58,7 @@ body.flyer{
     -webkit-box-shadow: 0 0 10px #000;
 }
 
-#print-modal-controls 
+.print-modal-controls 
 {
 	border: 1px solid #ccc;
     border-radius: 8px;
@@ -73,4 +73,4 @@ body.flyer{
     cursor:pointer;
 }
 
-#print_button{}
+.print_button{}
