--- a/css/app.css
+++ b/css/app.css
@@ -111,7 +111,6 @@ p {
 /* Overlay */
 
 .overlay_wrapper{
-	overflow: hidden;
 	display:none;
 	position: absolute; top: 0; left: 0;
 	width: 100%; height: 100%;
@@ -119,7 +118,7 @@ p {
 }
 
 .overlay{
-	overflow: hidden;
+	overflow-y: scroll;
 	background-color: #fff;
 	position: absolute; top: 0; left: 0;
 	width: 70%; height: 100%;
