--- a/css/flyer.css
+++ b/css/flyer.css
@@ -16,6 +16,7 @@ body.flyer{
 
 .flyer_title
 {
+  font-family: 'Tauri', Helvetica, Arial, sans-serif;
 	padding-left: 15%;
 	margin: 20px;
 	text-align: left;
