--- a/css/flyer.css
+++ b/css/flyer.css
@@ -27,6 +27,16 @@ body.flyer{
   overflow: hidden;
 }
 
+.transparent 
+{
+  zoom: 1; /* gives the object layout */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  opacity: 0.5;
+}
+
 .flyer_title
 {
   font-family: 'Tauri', Helvetica, Arial, sans-serif;
