--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,7 @@ body
 	/* Margin bottom by footer height */
 	margin-bottom: 60px;
 	padding-top: 100px;
+	overflow:hidden;
 }
 
 .footer 
@@ -121,6 +122,8 @@ p {
 /* Overlay */
 
 .overlay_wrapper{
+	
+	background-color:#79CFFF;
 	display:none;
 	position: absolute; top: 0; left: 0;
 	width: 100%; height: 100%;
