--- a/css/flyer.css
+++ b/css/flyer.css
@@ -119,3 +119,12 @@ body.flyer{
 .border-highlight{
    outline: #f4edc6 solid 5px !important;
 }
+
+.top-toolbar{
+  width:100%;
+  padding: 4px 0;
+  height: 44px;
+  z-index: 100;
+  position:absolute;
+  background: rgba(0,0,0,0.7);
+}
