--- a/css/app.css
+++ b/css/app.css
@@ -65,6 +65,7 @@ p {
 
 .form-elements
 {
+	padding-right: 0px;
 	margin: 8px 0 0 0;
 }
 
@@ -108,6 +109,13 @@ p {
 	text-align:center;
 	background: #eeeeee;
 
+}
+
+/* prevents right padding bug on text field */
+.has-feedback
+.form-control
+{
+	padding-right: 0px;
 }
 
 .form_column{
